// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Heading Centered 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-md weight-bold is-centered"
  >
    Lose consequence night studies Wolves should wizards destruction burglar? All right, then. Keep your secrets.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Heading Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-primary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-tertiary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-inverted size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Heading Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-md weight-bold is-inline"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Heading Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-xs weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-sm weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-lg weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-2xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Heading Weights 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <h1
    className="heading color-base size-md weight-normal"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
  <h1
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </h1>
</div>
`;
